majority of horizontal scroll fixed

--- a/source/stylesheets/_homepage.scss
+++ b/source/stylesheets/_homepage.scss
@@ -1,5 +1,8 @@
 
 
+//mobile base
+
+//Sizes
 .max-website-width{
   max-width: 1400px;
   margin:0 auto;
@@ -11,21 +14,50 @@
   }
 
 
+.center-object{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+.full-width-height{
+
+  width: 100%;
+  height: 100%;
+}
+
+.standard-container{
+  @extend .full-width-height;
+  @extend .center-object;
+}
 
 
+.image-container{
+  height: 20em;
+  width:auto;
+}
+
+//sets text centered on mobile, left aligned on desktop 
+.text-center-mobile{
+  text-align: center;
+  margin:auto;
+}
+
+.text-center{
+  text-align: center;
+}
 
 .video-size{
   height: 100%;
 
+    // resizes around medium size screen to prevent large video
    @media only screen and (max-width: $break-medium) and (min-width: 475px){
     height: 75vh;
-
     }
-
   }
   
+  
 
-
+//colors
 
 .beyond-max-color{
   background-color: #F8F8F8;
@@ -47,46 +79,8 @@
  background-color: $contrast-neutral-color;
 }
 
-//sets text centered on mobile, left aligned on desktop 
-.text-center-mobile{
-  text-align: center;
-  margin:auto;
-}
 
 
-.text-center{
-  text-align: center;
-}
-
-
-.image-container{
-  height: 20em;
-  width:auto;
-}
-.center-object{
-  display:flex;
-  justify-content: center;
-  align-items: center;
-}
-.full-width-height{
-
-  width: 100%;
-  height: 100%;
-}
-
-/*
-// for non-video version 
-.purple-blob{
-  position: absolute;
-  top:8%;
-  width: 81%;
-}
-
-.image-front{
-  position: relative;
-  z-index: 200;
-}
-*/
 
 //desktop view
 @media only screen and (min-width: $break-medium){
@@ -100,14 +94,5 @@
     text-align:left;
   }
 
-/* 
-for non-video version
-
-  .purple-blob{
-    position: absolute;
-    top:4em;
-    width: 41%;
-  }
-*/
 
 }
